@@ -1,3 +1,9 @@
+2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/cm/__init__.py:
+
+	Added functions to export matplotlib colormaps to txt and cpt files.
+
 2016-08-17  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/utils/cache.py:
